--- a/index.html
+++ b/index.html
@@ -67,10 +67,55 @@
           }
         </pre>
       </div>
+
+      <div class="h1" style="padding: 0; padding-top: 50px;"><h1>fractal.<span>Tree</span>()</h1></div>
+
+
     </div>
   </div>
   </div>
 
+  <pre id="pre">
+    var angle = 0;
+var slider;
+
+function setup() {
+  createCanvas(400, 400);
+  slider = createSlider(0, TWO_PI, PI / 4, 0.01);
+}
+
+function draw() {
+  background(51);
+  angle = slider.value();
+  stroke(255);
+  translate(200, height);
+  branch(100);
+}
+
+function branch(len) {
+  line(0, 0, 0, -len);
+  translate(0, -len);
+  if (len > 4) {
+    push();
+    rotate(angle);
+    branch(len * 0.67);
+    pop();
+    push();
+    rotate(-angle);
+    branch(len * 0.67);
+    pop();
+  }
+
+  //line(0, 0, 0, -len * 0.67);
+}
+  </pre>
+
   <script src="script.js"></script>
+
+  <script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.min.js"></script>
+  <!-- uncomment lines below to include extra p5 libraries -->
+  
+  <!--<script language="javascript" src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/addons/p5.sound.min.js"></script>-->
+  <script language="javascript" type="text/javascript" src="sketch.js"></script>
 </body>
 </html>
