--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@ function branch(len) {
 }
   </pre>
 
+  <div class="angle">
+    <p id="angleP">1000010010100</p>
+  </div>
+
   <script src="script.js"></script>
 
   <script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.min.js"></script>
