--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ function branch(len) {
   </pre>
 
   <div class="angle">
-    <p id="angleP">1000010010100</p>
+    <p id="angleP"></p>
   </div>
 
   <script src="script.js"></script>
